# ansible-pygments

./: .codecov.yml  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .yamllint  LICENSE.md  README.md  lint-flake8.sh  lint-mypy.sh  lint-pylint.sh  lint-pyre.sh  pyproject.toml  pytest.ini  test-pytest.sh  tox.ini
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  pythonlinters.yml  pythontests.yml
src/ansible_pygments/: __init__.py  lexers.py  styles.py
src/sphinx_ansible_highlighter/: __init__.py  pygments_lexer.py
tests/: lexer_test.py  style_test.py  test_lexer.py
