[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "ansible-pygments"
version = "0.1.0"
description = "Tools for building the Ansible Distribution"
authors = ["Felix Fontein <felix@fontein.de>"]
license = "BSD-2-Clause"
readme = "README.md"
repository = "https://github.com/ansible-community/ansible-pygments"
packages = [
    { include = "ansible_pygments", from = "src" },
    { include = "tests", format = "sdist" }
]

[tool.poetry.plugins."pygments.lexers"]
Ansible-output = "ansible_pygments.lexers:AnsibleOutputLexer"
ansible-output = "ansible_pygments.lexers:AnsibleOutputLexer"

[tool.poetry.plugins."pygments.styles"]
Ansible = "ansible_pygments.styles:AnsibleStyle"
ansible = "ansible_pygments.styles:AnsibleStyle"

[tool.poetry.dependencies]
python = "^3.6.0"
# Pygments 2.4.0 includes bugfixes for YAML and YAML+Jinja lexers
pygments = ">= 2.4.0"

[tool.poetry.dev-dependencies]
codecov = "*"
flake8 = ">= 3.8.0"
pylint = "*"
pytest = "*"
pytest-cov = "*"

[tool.isort]
line_length = 100
multi_line_output = 0
balanced_wrapping = true
