[build-system]
requires = ["poetry-core>=1.0.7"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ansible-pygments"
version = "0.1.1"
description = "Tools for building the Ansible Distribution"
authors = ["Felix Fontein <felix@fontein.de>"]
license = "BSD-2-Clause"
readme = "README.md"
repository = "https://github.com/ansible-community/ansible-pygments"
packages = [
    { include = "ansible_pygments", from = "src" },
    { include = "tests", format = "sdist" }
]
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers"
]

[tool.poetry.urls]
"Mailing lists" = "https://docs.ansible.com/ansible/latest/community/communication.html#mailing-list-information"
"Code of Conduct" = "https://docs.ansible.com/ansible/latest/community/code_of_conduct.html"
"CI: GitHub" = "https://github.com/ansible-community/ansible-pygments/actions?branch:main+event:push"
"CI: CodeCov" = "https://app.codecov.io/gh/ansible-community/ansible-pygments"
"Bug tracker" = "https://github.com/ansible-community/ansible-pygments/issues"

[tool.poetry.plugins."pygments.lexers"]
Ansible-output = "ansible_pygments.lexers:AnsibleOutputLexer"
ansible-output = "ansible_pygments.lexers:AnsibleOutputLexer"

[tool.poetry.plugins."pygments.styles"]
Ansible = "ansible_pygments.styles:AnsibleStyle"
ansible = "ansible_pygments.styles:AnsibleStyle"

[tool.poetry.dependencies]
python = "^3.6.0"
# Pygments 2.4.0 includes bugfixes for YAML and YAML+Jinja lexers
pygments = ">= 2.4.0"

[tool.poetry.dev-dependencies]
codecov = "*"
flake8 = ">= 3.8.0"
pylint = "*"
pytest = "*"
pytest-cov = "*"
# The following is needed for unit tests to pass
pygments = ">= 2.11.0"

[tool.isort]
balanced_wrapping = true
include_trailing_comma = true
indent = 4
known_first_party = 'ansible_pygments'
known_framework = 'pygments'
known_testing = ['pytest', 'unittest']
# Should be: 80 - 1
line_length = 79
# https://github.com/timothycrosley/isort#multi-line-output-modes
multi_line_output = 5
no_lines_before = 'LOCALFOLDER'
sections = [
    'FUTURE',
    'STDLIB',
    'FRAMEWORK',
    'TESTING',
    'THIRDPARTY',
    'FIRSTPARTY',
    'LOCALFOLDER',
]
use_parentheses = true
